# fishermon

./: Cargo.toml  README.md  fishermon.toml.example
src/: .lib.rs.swp  .main.rs.swp  lib.rs  main.rs  strategy.rs
tests/: lib.rs
